--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
-version: "3.9"
+version: "3.8"
 
 services:
-  whisper-api:
-    build: .
+  whisper:
+    build:
+      context: .
+    container_name: whisper-transcriber
     ports:
-      - "8000:8000"
-    restart: always
+      - "5000:5000"
+    volumes:
+      - ./app:/app
+    restart: unless-stopped
